03/y.output
Terminals which are not used

   tAND


Grammar

    0 $accept: root $end

    1 root: /* empty */
    2     | exp

    3 exp: logical_exp tSCOLON exp
    4    | logical_exp

    5 logical_exp: piped_exp tANDAND logical_exp
    6            | piped_exp tOROR logical_exp
    7            | piped_exp

    8 piped_exp: redirect_exp tOR piped_exp
    9          | redirect_exp

   10 redirect_exp: redirect_exp tLT str
   11             | redirect_exp tGT str
   12             | redirect_exp tGT_ERR str
   13             | redirect_exp tGTGT str
   14             | cmd_exp

   15 cmd_exp: tLPAREN exp tRPAREN
   16        | strs

   17 strs: str strs
   18     | str

   19 str: tBARE
   20    | tQSTRING
   21    | tQQSTRING


Terminals, with rules where they appear

$end (0) 0
error (256)
tANDAND (258) 5
tOROR (259) 6
tGTGT (260) 13
tSCOLON (261) 3
tAND (262)
tOR (263) 8
tLPAREN (264) 15
tRPAREN (265) 15
tLT (266) 10
tGT (267) 11
tGT_ERR (268) 12
tBARE (269) 19
tQSTRING (270) 20
tQQSTRING (271) 21


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
root (18)
    on left: 1 2, on right: 0
exp (19)
    on left: 3 4, on right: 2 3 15
logical_exp (20)
    on left: 5 6 7, on right: 3 4 5 6
piped_exp (21)
    on left: 8 9, on right: 5 6 7 8
redirect_exp (22)
    on left: 10 11 12 13 14, on right: 8 9 10 11 12 13
cmd_exp (23)
    on left: 15 16, on right: 14
strs (24)
    on left: 17 18, on right: 16 17
str (25)
    on left: 19 20 21, on right: 10 11 12 13 17 18


state 0

    0 $accept: . root $end

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    $default  reduce using rule 1 (root)

    root          go to state 5
    exp           go to state 6
    logical_exp   go to state 7
    piped_exp     go to state 8
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 1

   15 cmd_exp: tLPAREN . exp tRPAREN

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    exp           go to state 13
    logical_exp   go to state 7
    piped_exp     go to state 8
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 2

   19 str: tBARE .

    $default  reduce using rule 19 (str)


state 3

   20 str: tQSTRING .

    $default  reduce using rule 20 (str)


state 4

   21 str: tQQSTRING .

    $default  reduce using rule 21 (str)


state 5

    0 $accept: root . $end

    $end  shift, and go to state 14


state 6

    2 root: exp .

    $default  reduce using rule 2 (root)


state 7

    3 exp: logical_exp . tSCOLON exp
    4    | logical_exp .

    tSCOLON  shift, and go to state 15

    $default  reduce using rule 4 (exp)


state 8

    5 logical_exp: piped_exp . tANDAND logical_exp
    6            | piped_exp . tOROR logical_exp
    7            | piped_exp .

    tANDAND  shift, and go to state 16
    tOROR    shift, and go to state 17

    $default  reduce using rule 7 (logical_exp)


state 9

    8 piped_exp: redirect_exp . tOR piped_exp
    9          | redirect_exp .
   10 redirect_exp: redirect_exp . tLT str
   11             | redirect_exp . tGT str
   12             | redirect_exp . tGT_ERR str
   13             | redirect_exp . tGTGT str

    tGTGT    shift, and go to state 18
    tOR      shift, and go to state 19
    tLT      shift, and go to state 20
    tGT      shift, and go to state 21
    tGT_ERR  shift, and go to state 22

    $default  reduce using rule 9 (piped_exp)


state 10

   14 redirect_exp: cmd_exp .

    $default  reduce using rule 14 (redirect_exp)


state 11

   16 cmd_exp: strs .

    $default  reduce using rule 16 (cmd_exp)


state 12

   17 strs: str . strs
   18     | str .

    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    $default  reduce using rule 18 (strs)

    strs  go to state 23
    str   go to state 12


state 13

   15 cmd_exp: tLPAREN exp . tRPAREN

    tRPAREN  shift, and go to state 24


state 14

    0 $accept: root $end .

    $default  accept


state 15

    3 exp: logical_exp tSCOLON . exp

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    exp           go to state 25
    logical_exp   go to state 7
    piped_exp     go to state 8
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 16

    5 logical_exp: piped_exp tANDAND . logical_exp

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    logical_exp   go to state 26
    piped_exp     go to state 8
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 17

    6 logical_exp: piped_exp tOROR . logical_exp

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    logical_exp   go to state 27
    piped_exp     go to state 8
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 18

   13 redirect_exp: redirect_exp tGTGT . str

    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    str  go to state 28


state 19

    8 piped_exp: redirect_exp tOR . piped_exp

    tLPAREN    shift, and go to state 1
    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    piped_exp     go to state 29
    redirect_exp  go to state 9
    cmd_exp       go to state 10
    strs          go to state 11
    str           go to state 12


state 20

   10 redirect_exp: redirect_exp tLT . str

    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    str  go to state 30


state 21

   11 redirect_exp: redirect_exp tGT . str

    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    str  go to state 31


state 22

   12 redirect_exp: redirect_exp tGT_ERR . str

    tBARE      shift, and go to state 2
    tQSTRING   shift, and go to state 3
    tQQSTRING  shift, and go to state 4

    str  go to state 32


state 23

   17 strs: str strs .

    $default  reduce using rule 17 (strs)


state 24

   15 cmd_exp: tLPAREN exp tRPAREN .

    $default  reduce using rule 15 (cmd_exp)


state 25

    3 exp: logical_exp tSCOLON exp .

    $default  reduce using rule 3 (exp)


state 26

    5 logical_exp: piped_exp tANDAND logical_exp .

    $default  reduce using rule 5 (logical_exp)


state 27

    6 logical_exp: piped_exp tOROR logical_exp .

    $default  reduce using rule 6 (logical_exp)


state 28

   13 redirect_exp: redirect_exp tGTGT str .

    $default  reduce using rule 13 (redirect_exp)


state 29

    8 piped_exp: redirect_exp tOR piped_exp .

    $default  reduce using rule 8 (piped_exp)


state 30

   10 redirect_exp: redirect_exp tLT str .

    $default  reduce using rule 10 (redirect_exp)


state 31

   11 redirect_exp: redirect_exp tGT str .

    $default  reduce using rule 11 (redirect_exp)


state 32

   12 redirect_exp: redirect_exp tGT_ERR str .

    $default  reduce using rule 12 (redirect_exp)
